/*
 * $Id: ChangeLog,v 1.494 2002/11/14 08:05:22 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-11-14 12:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * config/dos/djgpp.cf
    + Add the math library to compilation.

2002-11-14 00:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed HB_P_ARRAYPUSH when Element is BYREF (unref).

2002-11-13 17:37 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/listbox.prg
  * source/rtl/radiogrp.prg
  * source/rtl/teditor.prg
  * source/rtl/tpopup.prg
    * Optimization of code, using AIns() and ADel() extended.
  * source/rtl/ttopbar.prg
    * Optimization of code, using FOR EACH - HB_EnumIndex() and
      AIns() and ADel() extended.

2002-11-13 15:50 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbrddcdx.h
   * source/rdd/dbfcdx/dbfcdx1.c
   * source/rdd/dbfcdx/dbfcdx1.h
   * source/rdd/dbfcdx/dbfcdx2.h
        ! fixed some declarations to avoid warnings,
          removed unnecessary introduced casts
        ! fixed skip bug reported by Andrzej
        ! fixed bug when empty scope used
        ! fixed posible index corruption when shared.
        + added functions cdxError, hb_cdxOrderListRebuild,
          hb_cdxIndexReindex
          Now reindex works, as well as pack and zap.

   * source/rdd/dbfntx/dbfntx1.c
        ! fixed skip bug, key updating
        ! Bug fixed ( setting controlling index doesn't caused movement to the
          top logical record before )
          Fixes from Harbour by Alexander Kresin

2002-11-13 12:35 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/gtdos/gtdos.c
    + Add support for DispBegin() and DispEnd() for DJGPP.

2002-11-13 12:03 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * include/hbfixdj.h