@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.494 2002/11/14 08:05:22 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.495 2002/11/14 15:31:08 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-11-14 13:43 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/arrays.c
+  * source/vm/hvm.c
+    ! Optimized recent fix to HB_P_ARRAYPUSH of element BYREF.
 
 2002-11-14 12:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * config/dos/djgpp.cf
